--- a/page2.html
+++ b/page2.html
@@ -90,9 +90,8 @@
 
             <div class="card bg-base-800 p-4 shadow rounded-lg">
                 <h2 class="text-md font-bold mb-3">ล้มแล้วลุกได้</h2>
-                <iframe class="aspect-video" width="560" height="315"
-                    src="https://www.youtube.com/embed/J1x4fFCorLc?si=eRqZwgsK-EC1X0DU" title="YouTube video player"
-                    frameborder="0"
+                <iframe class="aspect-video" src="https://www.youtube.com/embed/J1x4fFCorLc?si=eRqZwgsK-EC1X0DU"
+                    title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
