--- a/index.html
+++ b/index.html
@@ -87,12 +87,15 @@
 
   <div class="container max-w-lg mx-auto mt-8 px-5">
     <div class="grid grid-cols-1 lg:grid-cols-1 gap-4">
-      <a href="page1.html"
-        class="btn rounded-full btn-custom w-full custom-color-btn">การจัดการความเครียดและวิตกกังวล</a>
-      <a href="page2.html"
-        class="btn rounded-full btn-custom w-full custom-color-btn">การเสริมสร้างความรอบรู้สุขภาพจิต</a>
-      <a href="page3.html" class="btn rounded-full btn-custom w-full custom-color-btn">การเสริมสร้างพลังสุขภาพจิต</a>
+      <a href="page1.html" class="btn rounded-full btn-custom w-full btn-yellow">การจัดการความเครียดและวิตกกังวล</a>
+      <a href="page2.html" class="btn rounded-full btn-custom w-full btn-orange">การเสริมสร้างความรอบรู้สุขภาพจิต</a>
+      <a href="page3.html" class="btn rounded-full btn-custom w-full btn-green">การเสริมสร้างพลังสุขภาพจิต </a>
+      <a href="#" class="btn rounded-full btn-custom w-full btn-blue">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a>
+      <a href="#"
+        class="btn rounded-full btn-custom w-full btn-yellow">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a>
+
     </div>
+  </div>
   </div>
 </body>
 
