--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="carousel w-full">
     <div id="slide1" class="carousel-item relative w-full">
-      <img src="asset/bg-1.webp" />
+      <img src="asset/banner.jpg" />
       <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
         <a href="#slide4" class="btn btn-circle">❮</a>
         <a href="#slide2" class="btn btn-circle">❯</a>
