--- a/page1.html
+++ b/page1.html
@@ -31,15 +31,18 @@
 
                 <ul tabindex="0"
                     class="menu menu-md dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                    <li><a href="index.html">หน้าแรก</a></li>
+                    <li><a href="index.html">หน้าแรก </a></li>
                     <li><a href="page1.html">การจัดการความเครียดและวิตกกังวล</a></li>
                     <li><a href="page2.html">การเสริมสร้างความรอบรู้สุขภาพจิต</a></li>
                     <li><a href="page3.html">การเสริมสร้างพลังสุขภาพจิต</a></li>
+                    <li><a href="page4.html">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a></li>
+                    <li><a href="page5.html">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a></li>
                 </ul>
             </div>
             <a href="index.html">
                 <img src="asset/logoFinal.webp" alt="" class="" width="100" />
             </a>
+
         </div>
 
         <div class="navbar-center">
@@ -55,6 +58,7 @@
             </button>
         </div>
     </div>
+
 
 
 
