--- a/page5.html
+++ b/page5.html
@@ -61,25 +61,10 @@
 
 
     <div class="container mx-auto px-4 py-6">
-        <h1 class="font-bold text-xl text-center my-6">การเสริมสร้างพลังสุขภาพจิต</h1>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <div class="card bg-base-800 p-4 shadow rounded-lg">
-                <h1 class="text-md font-bold mb-3">การสร้างสุขภาพจิตที่ดี</h1>
-                <iframe class="aspect-video" src="https://www.youtube.com/embed/v0yvu-59JDM?si=T4m6zJVgxD4Scykx"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+        <h1 class="font-bold text-xl text-center my-6">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</h1>
+        <img src="/asset/วิธีอยู่กับภาวะซึมเศร้า.jpg" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า"
+            class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out" />
 
-            <div class="card bg-base-800 p-4 shadow rounded-lg">
-                <h2 class="text-md font-bold mb-3">ก้าวออกจากหลุมความคิดลบ</h2>
-                <iframe class="aspect-video" src="https://www.youtube.com/embed/imXYv2zLyQc?si=LMJriuhNIuSF-V51"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-
-        </div>
     </div>
 
 
