--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           <li><a href="page1.html">การจัดการความเครียดและวิตกกังวล</a></li>
           <li><a href="page2.html">การเสริมสร้างความรอบรู้สุขภาพจิต</a></li>
           <li><a href="page3.html">การเสริมสร้างพลังสุขภาพจิต</a></li>
+          <li><a href="page4.html">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a></li>
+          <li><a href="page5.html">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a></li>
         </ul>
       </div>
       <a href="index.html">
@@ -56,7 +58,7 @@
 
   <div class="carousel w-full">
     <div id="slide1" class="carousel-item relative w-full">
-      <img src="asset/banner.jpg" />
+      <img src="asset/banner.jpg  " />
       <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
         <a href="#slide4" class="btn btn-circle">❮</a>
         <a href="#slide2" class="btn btn-circle">❯</a>
@@ -90,8 +92,9 @@
       <a href="page1.html" class="btn rounded-full btn-custom w-full btn-yellow">การจัดการความเครียดและวิตกกังวล</a>
       <a href="page2.html" class="btn rounded-full btn-custom w-full btn-orange">การเสริมสร้างความรอบรู้สุขภาพจิต</a>
       <a href="page3.html" class="btn rounded-full btn-custom w-full btn-green">การเสริมสร้างพลังสุขภาพจิต </a>
-      <a href="#" class="btn rounded-full btn-custom w-full btn-blue">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a>
-      <a href="#"
+      <a href="page4.html"
+        class="btn rounded-full btn-custom w-full btn-blue">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a>
+      <a href="page5.html"
         class="btn rounded-full btn-custom w-full btn-yellow">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a>
 
     </div>
