--- a/page4.html
+++ b/page4.html
@@ -61,7 +61,7 @@
 
     <div class="container mx-auto px-4 py-6">
         <h1 class="font-bold text-xl text-center my-6">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</h1>
-        <img src="/asset/โปสเตอร์เสริมสร้างภาวะซึมเศร้า.jpg" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า"
+        <img src="/asset/วิธีอยู่กับภาวะซึมเศร้า.jpg" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า"
             class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out" />
 
     </div>
