--- a/page5.html
+++ b/page5.html
@@ -62,9 +62,8 @@
 
     <div class="container mx-auto px-4 py-6">
         <h1 class="font-bold text-xl text-center my-6">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</h1>
-        <img src="/asset/วิธีอยู่กับภาวะซึมเศร้า.jpg" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า"
+        <img src="/asset/โปสเตอร์เสริมสร้างภาวะซึมเศร้า.jpg" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า"
             class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out" />
-
     </div>
 
 
