--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li><a href="page3.html">การเสริมสร้างพลังสุขภาพจิต</a></li>
           <li><a href="page4.html">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a></li>
           <li><a href="page5.html">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a></li>
+          <li><a href="page6.html">ข้อความเตือนใจ</a></li>
         </ul>
       </div>
       <a href="index.html">
@@ -92,10 +93,9 @@
       <a href="page1.html" class="btn rounded-full btn-custom w-full btn-yellow">การจัดการความเครียดและวิตกกังวล</a>
       <a href="page2.html" class="btn rounded-full btn-custom w-full btn-orange">การเสริมสร้างความรอบรู้สุขภาพจิต</a>
       <a href="page3.html" class="btn rounded-full btn-custom w-full btn-green">การเสริมสร้างพลังสุขภาพจิต </a>
-      <a href="page4.html"
-        class="btn rounded-full btn-custom w-full btn-blue">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a>
-      <a href="page5.html"
-        class="btn rounded-full btn-custom w-full btn-yellow">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a>
+      <a href="page4.html" class="btn rounded-full btn-custom w-full btn-blue">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a>
+      <a href="page5.html" class="btn rounded-full btn-custom w-full btn-yellow">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a>
+      <a href="page6.html" class="btn rounded-full btn-custom w-full btn-orange">ข้อความเตือนใจ</a>
 
     </div>
   </div>
