--- a/page2.html
+++ b/page2.html
@@ -37,6 +37,8 @@
                     <li><a href="page3.html">การเสริมสร้างพลังสุขภาพจิต</a></li>
                     <li><a href="page4.html">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</a></li>
                     <li><a href="page5.html">โปสเตอร์การเสริมสร้างความรอบรู้การเห็นคุณค่าในตัวเอง</a></li>
+                    <li><a href="page6.html">ข้อความเตือนใจ</a></li>
+
                 </ul>
             </div>
             <a href="index.html">
