เพิ่มรูป ปุ่มข้อความเตือนใจ

--- a/page6.html
+++ b/page6.html
@@ -60,6 +60,21 @@
     </div>
 
 
+    <div class="container mx-auto px-4 py-6">
+    
+        <img src="/asset/18_9_67.jpg" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/19_9_67.jpg" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/1_10_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/20_9_67.jpg" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/24_09_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/25_09_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/26_09_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/27_09_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/28_09_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/29_09_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/2_10_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+        <img src="/asset/30_09_67.JPG" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-2" />
+    </div>
 
 
     
