--- a/page4.html
+++ b/page4.html
@@ -63,8 +63,9 @@
 
     <div class="container mx-auto px-4 py-6">
         <h1 class="font-bold text-xl text-center my-6">โปสเตอร์การเสริมสร้างความรอบรู้ภาวะซึมเศร้า</h1>
-        <img src="/asset/วิธีอยู่กับภาวะซึมเศร้า.jpg" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า"
-            class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out" />
+        <img src="/asset/วิธีอยู่กับภาวะซึมเศร้า.jpg" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out" />
+        <img src="/asset/ซึมเศร้า(1).png" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-10" />
+        <img src="/asset/ซึมเศร้า.png" alt="โปสเตอร์เสริมสร้างภาวะซึมเศร้า" class="rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out my-10" />
 
     </div>
 
